--- a/css/site-styling.css
+++ b/css/site-styling.css
@@ -208,13 +208,15 @@ nav .dropdown {
 nav .dropdown .dropdown-toggle::after {
   margin-left: 0;
   vertical-align: .15rem;
+  -webkit-transition: transform 0.2s ease;
+  -moz-transition: transform 0.2s ease;
+  -ms-transition: transform 0.2s ease;
+  -o-transition: transform 0.2s ease;
+  transition: transform 0.2s ease;
 }
 
 nav .dropdown .dropdown-toggle.show::after {
-  border-top: 0;
-  border-right: 0.3em solid transparent;
-  border-bottom: 0.3em solid;
-  border-left: 0.3em solid transparent;
+  transform: rotate(180deg);
 }
 
 nav .dropdown button {
@@ -233,11 +235,25 @@ nav .dropdown .dropdown-menu {
   background: #03002e;
   border: 0.1rem solid #fff;
   text-align: center;
-  width: 50%;
+  width: 60%;
   margin: 0.5rem auto;
   position: absolute;
   left: 0;
   right: 0;
+  -webkit-animation: fadeIn 0.5s;
+  -moz-animation: fadeIn 0.5s;
+  -ms-animation: fadeIn 0.5s;
+  -o-animation: fadeIn 0.5s;
+  animation: fadeIn 0.5s;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 nav .dropdown .dropdown-menu .nav-link {
