--- a/css/site-styling.css
+++ b/css/site-styling.css
@@ -63,7 +63,6 @@ footer {
   text-align: center;
   padding: 2rem 0;
   min-height: 5rem;
-  margin-top: 4.5rem;
 }
 
 footer a {
@@ -77,6 +76,10 @@ footer a i {
 
 footer .footer-copyright {
   margin-top: .5rem;
+}
+
+#globalFooter {
+  margin-top: 4.5rem;
 }
 
 /* Hamburger Menu Styling - START */
@@ -753,10 +756,12 @@ h1, h2 {
   footer {
     position: static;
     background: #03002e;
-    margin-top: 2rem;
   }
   footer a i {
     padding: 0 .75rem;
+  }
+  #globalFooter {
+    margin-top: 2rem;
   }
   /* Header Nav CSS */
   .hamburger, #mobileNav {
