--- a/css/site-styling.css
+++ b/css/site-styling.css
@@ -78,7 +78,7 @@ footer .footer-copyright {
   margin-top: .5rem;
 }
 
-#globalFooter {
+#contactSection {
   margin-top: 4.5rem;
 }
 
@@ -760,7 +760,7 @@ h1, h2 {
   footer a i {
     padding: 0 .75rem;
   }
-  #globalFooter {
+  #contactSection {
     margin-top: 2rem;
   }
   /* Header Nav CSS */
