--- a/css/site-styling.css
+++ b/css/site-styling.css
@@ -548,10 +548,19 @@ h1, h2 {
 #storeSection a {
   text-decoration: none;
   color: #fff;
+  border: 0.1rem solid;
+  border-radius: 30rem;
+  margin: 1rem auto;
+  min-width: 9rem;
+  text-align: center;
 }
 
 #storeSection a:hover {
   color: #07c2f9;
+}
+
+#storeSection a:first-child {
+  margin-top: 0.5rem;
 }
 
 #storeSection button {
