--- a/css/site-styling.css
+++ b/css/site-styling.css
@@ -573,9 +573,13 @@ h1, h2 {
   color: #07c2f9;
 }
 
-#storeSection .dropdown .dropdown-menu {
+#storeSection .dropend .dropdown-menu {
   background: #03002e;
   border: 0.1rem solid #fff;
+  margin: 0.5rem auto;
+  position: absolute;
+  left: 0;
+  right: 0;
   -webkit-animation: fadeIn 0.5s;
   -moz-animation: fadeIn 0.5s;
   -ms-animation: fadeIn 0.5s;
@@ -592,14 +596,18 @@ h1, h2 {
   }
 }
 
-#storeSection .dropdown .dropdown-menu .dropdown-header {
+#storeSection .dropend .dropdown-menu .dropdown-header {
   color: #fff;
   text-transform: uppercase;
   text-align: center;
   text-decoration: underline;
 }
 
-#storeSection .dropdown .dropdown-toggle::after {
+#storeSection .dropend .dropdown-toggle::after {
+  border-top: 0.3em solid;
+  border-right: 0.3em solid transparent;
+  border-bottom: 0;
+  border-left: 0.3em solid transparent;
   margin-left: 0;
   vertical-align: .15rem;
   -webkit-transition: transform 0.2s ease;
@@ -609,8 +617,8 @@ h1, h2 {
   transition: transform 0.2s ease;
 }
 
-#storeSection .dropdown .dropdown-toggle.show::after {
-  transform: rotate(180deg);
+#storeSection .dropend .dropdown-toggle.show::after {
+  transform: rotate(270deg);
 }
 
 /* STYLING FOR CONTACT FORM - START */
