--- a/css/site-styling.css
+++ b/css/site-styling.css
@@ -573,7 +573,7 @@ h1, h2 {
   color: #07c2f9;
 }
 
-#storeSection .dropend .dropdown-menu {
+#storeSection .dropdown .dropdown-menu {
   background: #03002e;
   border: 0.1rem solid #fff;
   margin: 0.5rem auto;
@@ -596,18 +596,14 @@ h1, h2 {
   }
 }
 
-#storeSection .dropend .dropdown-menu .dropdown-header {
+#storeSection .dropdown .dropdown-menu .dropdown-header {
   color: #fff;
   text-transform: uppercase;
   text-align: center;
   text-decoration: underline;
 }
 
-#storeSection .dropend .dropdown-toggle::after {
-  border-top: 0.3em solid;
-  border-right: 0.3em solid transparent;
-  border-bottom: 0;
-  border-left: 0.3em solid transparent;
+#storeSection .dropdown .dropdown-toggle::after {
   margin-left: 0;
   vertical-align: .15rem;
   -webkit-transition: transform 0.2s ease;
@@ -617,8 +613,8 @@ h1, h2 {
   transition: transform 0.2s ease;
 }
 
-#storeSection .dropend .dropdown-toggle.show::after {
-  transform: rotate(270deg);
+#storeSection .dropdown .dropdown-toggle.show::after {
+  transform: rotate(180deg);
 }
 
 /* STYLING FOR CONTACT FORM - START */
