--- a/css/site-styling.css
+++ b/css/site-styling.css
@@ -577,9 +577,9 @@ h1, h2 {
   background: #03002e;
   border: 0.1rem solid #fff;
   margin: 0.5rem auto;
-  position: absolute;
-  left: 0;
-  right: 0;
+  left: 50% !important;
+  transform: translate(-50%, 5%) !important;
+  top: 100% !important;
   -webkit-animation: fadeIn 0.5s;
   -moz-animation: fadeIn 0.5s;
   -ms-animation: fadeIn 0.5s;
