--- a/css/site-styling.css
+++ b/css/site-styling.css
@@ -767,7 +767,7 @@ h1, h2 {
   nav .dropdown .dropdown-menu {
     width: 35%;
     left: 50% !important;
-    transform: translate(-50%, 5%) !important;
+    transform: translateX(-50%) !important;
     top: 100% !important;
   }
   #topSection h1 {
