--- a/css/site-styling.css
+++ b/css/site-styling.css
@@ -160,6 +160,14 @@ footer .footer-copyright {
 
 #mobileNav .dropdown-menu .nav-link {
   border: none;
+  /*
+            color: $white-text;
+            border: 0.1rem solid;
+            border-radius: 30rem;
+            margin: 1rem auto;
+            min-width: 12rem;
+            text-align: center; 
+            */
 }
 
 #mobileNav a, #mobileNav button {
@@ -770,6 +778,7 @@ h1, h2 {
     right: 50% !important;
     transform: translateX(-50%) !important;
     top: 100% !important;
+    z-index: 1000;
   }
   #topSection h1 {
     line-height: 5rem;
