--- a/css/site-styling.css
+++ b/css/site-styling.css
@@ -575,6 +575,10 @@ h1, h2 {
   border: none;
   background: none;
   color: #03002e;
+  border: 0.1rem solid;
+  border-radius: 30rem;
+  min-width: 15rem;
+  padding: 0.5rem;
 }
 
 #storeSection button:hover, #storeSection button:focus, #storeSection button:active {
@@ -586,8 +590,10 @@ h1, h2 {
   border: 0.1rem solid #fff;
   margin: 0.5rem auto;
   left: 50% !important;
-  transform: translate(-50%, 5%) !important;
+  transform: translateX(-50%) !important;
   top: 100% !important;
+  min-width: 15rem;
+  height: max-content;
   -webkit-animation: fadeIn 0.5s;
   -moz-animation: fadeIn 0.5s;
   -ms-animation: fadeIn 0.5s;
