--- a/css/site-styling.css
+++ b/css/site-styling.css
@@ -583,7 +583,7 @@ h1, h2 {
   overflow-y: scroll;
   z-index: 400;
   border: 0.1rem solid #fff;
-  padding: 2.5%;
+  padding: 2rem;
 }
 
 #productSection #storePopup .close-popup-overlay {
