--- a/css/site-styling.css
+++ b/css/site-styling.css
@@ -579,6 +579,7 @@ h1, h2 {
   margin: auto;
   max-width: 90%;
   max-height: 25rem;
+  height: fit-content;
   background: #03002e;
   overflow-y: auto;
   z-index: 400;
