--- a/css/site-styling.css
+++ b/css/site-styling.css
@@ -590,6 +590,11 @@ h1, h2 {
   -ms-animation: fadeIn 0.5s;
   -o-animation: fadeIn 0.5s;
   animation: fadeIn 0.5s;
+  -webkit-animation: fadeOut 0.5s;
+  -moz-animation: fadeOut 0.5s;
+  -ms-animation: fadeOut 0.5s;
+  -o-animation: fadeOut 0.5s;
+  animation: fadeOut 0.5s;
 }
 
 @keyframes fadeIn {
@@ -598,6 +603,15 @@ h1, h2 {
   }
   100% {
     opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
   }
 }
 
