--- a/css/site-styling.css
+++ b/css/site-styling.css
@@ -581,7 +581,6 @@ h1, h2 {
   max-height: 25rem;
   height: fit-content;
   background: #03002e;
-  overflow-y: auto;
   z-index: 400;
   border: 0.1rem solid #fff;
   padding: 2rem;
@@ -612,6 +611,11 @@ h1, h2 {
 #productSection #storePopup .close-popup-overlay:hover {
   color: #07c2f9;
   cursor: pointer;
+}
+
+#productSection #storePopup .row {
+  overflow: auto;
+  max-height: 19rem;
 }
 
 #productSection #storePopup .store-link {
@@ -929,6 +933,9 @@ h1, h2 {
   #productSection #storePopup {
     width: 70%;
     max-height: 35rem;
+  }
+  #productSection #storePopup .row {
+    max-height: 29rem;
   }
   #videoPlayer {
     height: 30rem;
