--- a/css/site-styling.css
+++ b/css/site-styling.css
@@ -1024,7 +1024,7 @@ h1, h2 {
     position: relative;
     font-size: 2rem;
     top: .25rem;
-    color: #e2d339;
+    color: #fff;
   }
   .no-scroll {
     overflow: visible;
