--- a/css/site-styling.css
+++ b/css/site-styling.css
@@ -781,7 +781,7 @@ h1, h2 {
   font-size: 1rem;
   line-height: 1.25rem;
   margin: 1rem 0;
-  padding: .25rem .75rem;
+  padding: .25rem 1.25rem;
   text-align: left;
 }
 
