--- a/scss/site-styling.scss
+++ b/scss/site-styling.scss
@@ -2,29 +2,47 @@
 Content: Willow's Reef Website SCSS Styling
 Developer: Sergio Pacheco 
 
---------------------------------------- Index ---------------------------------------                     
-                Content                   |         Search Keyword (ctrl+f the following terms)
--------------------------------------------------------------------------------------
-Fonts                                     |                     FNTKY
-Global Variables                          |                     VARKY
-Body                                      |                     BDYKY
-Global Link Styles                        |                     LNKKY
-Screen Overlays                           |                     OVRKY
-Header                                    |                     HDRKY
-Footer                                    |                     FTRKY
-Homepage Welcome                          |                     HOMKY
-Homepage Customer Images                  |                     HCIKY
-Products Pages/Content                    |                     PRDKY
-Stores Page                               |                     STRKY
-Store Pop-up                              |                     STPKY
-Blog Page                                 |                     BLGKY
-Community Images Page                     |                     CIMKY
-Feeding Videos Page                       |                     FDVKY
-About Us Page                             |                     ABTKY
-Contact Us Form                           |                     CONKY
-Contact Confirmation Page                 |                     CFMKY
-Media Queries                             |                     MEDKY
--------------------------------------------------------------------------------------
+---------------------------------------- Index ---------------------------------------------
+|                  Content                 |            Search Keyword (ctrl+f)            |
+|------------------------------------------------------------------------------------------|
+| Fonts                                    |                     FNTKY                     |
+|------------------------------------------------------------------------------------------|
+| Global Variables                         |                     VARKY                     |
+|------------------------------------------------------------------------------------------|
+| Body                                     |                     BDYKY                     |
+|------------------------------------------------------------------------------------------|
+| Global Link Styles                       |                     LNKKY                     |
+|------------------------------------------------------------------------------------------|
+| Screen Overlays                          |                     OVRKY                     |
+|------------------------------------------------------------------------------------------|
+| Header                                   |                     HDRKY                     |
+|------------------------------------------------------------------------------------------|
+| Footer                                   |                     FTRKY                     |
+|------------------------------------------------------------------------------------------|
+| Homepage Welcome                         |                     HOMKY                     |
+|------------------------------------------------------------------------------------------|
+| Homepage Customer Images                 |                     HCIKY                     |
+|------------------------------------------------------------------------------------------|
+| Products Pages/Content                   |                     PRDKY                     |
+|------------------------------------------------------------------------------------------|
+| Stores Page                              |                     STRKY                     |
+|------------------------------------------------------------------------------------------|
+| Store Pop-up                             |                     STPKY                     |
+|------------------------------------------------------------------------------------------|
+| Blog Page                                |                     BLGKY                     |
+|------------------------------------------------------------------------------------------|
+| Community Images Page                    |                     CIMKY                     |
+|------------------------------------------------------------------------------------------|
+| Feeding Videos Page                      |                     FDVKY                     |
+|------------------------------------------------------------------------------------------|
+| About Us Page                            |                     ABTKY                     |
+|------------------------------------------------------------------------------------------|
+| Contact Us Form                          |                     CONKY                     |
+|------------------------------------------------------------------------------------------|
+| Contact Confirmation Page                |                     CFMKY                     |
+|------------------------------------------------------------------------------------------|
+| Media Queries                            |                     MEDKY                     |
+--------------------------------------------------------------------------------------------
 */
 
 /* Font Imports [ FNTKY ]*/
